styles/styles.css
/**
* ==========================================================================
   styles.css -- Global styles for the MyRWD website
   ========================================================================== 

*
* Created April 2, 2014
* Authored by John Kuczarski
*
*/

/* ----- Basic Styling ----- */

body {
  background-color: lightblue
}
#page-wrapper{
  background-color:white;
  margin: auto;
  max-width: 960px;
}
#content{
  background-color:#f7f2da;
  padding: 0 1em;
  margin-bottom: 10px;
}
nav{
  background-color:gray;
  padding: 0;
  margin: 0; 
}
nav ul {
  padding: 3px 10px;
  list-style-type: none;
}
footer {
  clear: both;
}

/* ----- Ad Styling ----- */
.wide-skyscaper-ad {
  width: 160px;
  height: 600px;
  background-color: silver;
  
}

/* ----- Three-Column Fixed Layout ----- */
#page-wrapper {
  width: 960px;
}
nav {
  float: left;
  width: 175px;
  box-sizing: border-box;
}
#content {
  float: left;
  width: 625px;
  box-sizing: border-box;
}
#sidebar {
  float: left;
  width: 160px;
  box-sizing: border-box;
}

